-Added WaitforLoad Start and End

--- a/NotTAS/NotTAS.vcxproj.filters
+++ b/NotTAS/NotTAS.vcxproj.filters
@@ -13,15 +13,18 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Access">
+      <UniqueIdentifier>{e652ec40-9e63-402f-b570-f3320b70972b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Interface">
+      <UniqueIdentifier>{803fb3ea-8a7c-41e1-a83d-418b9a2616dd}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ScriptManager.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="MainWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="InputManager.cpp">
@@ -34,17 +37,17 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MemoryAccess.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Access</Filter>
     </ClCompile>
     <ClCompile Include="ProcessAccess.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Access</Filter>
+    </ClCompile>
+    <ClCompile Include="MainWindow.cpp">
+      <Filter>Interface</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ScriptManager.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="MainWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="InputManager.h">
@@ -57,10 +60,13 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MemoryAccess.h">
-      <Filter>Header Files</Filter>
+      <Filter>Access</Filter>
     </ClInclude>
     <ClInclude Include="ProcessAccess.h">
-      <Filter>Header Files</Filter>
+      <Filter>Access</Filter>
+    </ClInclude>
+    <ClInclude Include="MainWindow.h">
+      <Filter>Interface</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
