--- a/NotTAS/NotTAS.vcxproj
+++ b/NotTAS/NotTAS.vcxproj
@@ -180,13 +180,20 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Window_Settings.resx">
       <DependentUpon>Forms\Window_Settings.h</DependentUpon>
+      <DeploymentContent>true</DeploymentContent>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="NotTAS.rc" />
+    <ResourceCompile Include="NotTAS.rc">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
+    </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\NotTAS.png" />
+    <Image Include="C:\Users\pedro\OneDrive\Imagens\NotTAS.ico">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
+    </Image>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
