--- a/NotTAS/NotTAS.vcxproj.filters
+++ b/NotTAS/NotTAS.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="Forms\Window_Settings.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SettingsFileManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ScriptManager.h">
@@ -78,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SettingsFileManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
